--- a/web/src/style.scss
+++ b/web/src/style.scss
@@ -16,3 +16,44 @@ body {
 a {
   color: #999;
 }
+
+// colors  有冲突的颜色加上引号（为了统一一般建议都加引号）
+$colors: (
+  "primary": #db9e3f,
+  "white": #fff,
+  "light": #f9f9f9,
+  "grey": #999,
+  "dark-1": #343440,
+  "dark": #222,
+  "blank": #000,
+);
+@each $colorKey, $color in $colors {
+  .text-#{$colorKey} {
+    color: $color;
+  }
+  .bg-#{$colorKey} {
+    background-color: $color;
+  }
+}
+
+// text
+@each $var in (left, center, right) {
+  .text-#{$var} {
+    text-align: $var;
+  }
+}
+
+// font-size      使用px to rem （快捷键：Alt+s, Alt+z）
+$base-font-size: 1rem;
+$font-sizes: (
+  xs: 0.7692,  // 10px
+  sm: 0.9231,  // 12px
+  md: 1,       // 13px
+  lg: 1.0769,  // 14px
+  xl: 1.2308   // 16px
+);
+@each $sizeKey, $size in $font-sizes {
+  .fs-#{$sizeKey} {
+    font-size: $size * $base-font-size;
+  }
+}
