--- a/web/src/style.scss
+++ b/web/src/style.scss
@@ -95,3 +95,45 @@ $flex-ai: (   // align-items        交叉轴
 .flex-grow-1 {
   flex-grow: 1;
 }
+
+
+// spacing
+$spacing-types: ( m: margin, p: padding );    // margin padding
+$spacing-directions: ( t: top, r: right, b: bottom, l: left );  // 上右下左
+$spacing-base-size: 1rem;
+$spacing-sizes: (
+  0: 0,
+  1: 0.25,
+  2: 0.5,
+  3: 1,
+  4: 1.5,
+  5: 3
+);
+@each $typeKey, $type in $spacing-types {
+  // 类似.m-1
+  @each $sizeKey, $size in $spacing-sizes {
+    .#{$typeKey}-#{$sizeKey} {
+      #{$type}: $size * $spacing-base-size;
+    }
+  }
+  // 类似.mx-1 .my-1
+  @each $sizeKey, $size in $spacing-sizes {
+    .#{$typeKey}x-#{$sizeKey} {
+      #{$type}-left: $size * $spacing-base-size;
+      #{$type}-right: $size * $spacing-base-size;
+    }
+    .#{$typeKey}y-#{$sizeKey} {
+      #{$type}-top: $size * $spacing-base-size;
+      #{$type}-bottom: $size * $spacing-base-size;
+    }
+  }
+  // 类似.mt-1
+  @each $directionKey, $direction in $spacing-directions {
+    @each $sizeKey, $size in $spacing-sizes {
+      // 生成类似  .mt-1 { margin-top: 0.25rem; }  的样式
+      .#{$typeKey}#{$directionKey}-#{$sizeKey} {
+        #{$type}-#{$direction}: $size * $spacing-base-size;
+      }
+    }
+  }
+}
