--- a/web/src/assets/scss/style.scss
+++ b/web/src/assets/scss/style.scss
@@ -1,13 +1,17 @@
+@import './variables';  // 引入变量
+
 // reset 样式重置
 * {
   box-sizing: border-box;
   outline: none;
 }
 html {
+  height: 100%;
   // 为rem做准备
   font-size: 13px;
 }
 body {
+  height: 100%;
   margin: 0;
   font-family: Arial, Helvetica, sans-serif;
   line-height: 1.2rem;
@@ -19,16 +23,6 @@ a {
 }
 
 // colors  有冲突的颜色加上引号（为了统一一般建议都加引号）
-$colors: (
-  "primary": #db9e3f,
-  "white": #fff,
-  "light": #f9f9f9,
-  "grey": #999,
-  "grey-1": #666,
-  "dark-1": #343440,
-  "dark": #222,
-  "black": #000,
-);
 @each $colorKey, $color in $colors {
   .text-#{$colorKey} {
     color: $color;
@@ -46,19 +40,18 @@ $colors: (
 }
 
 // font-size      使用px to rem （快捷键：Alt+s, Alt+z）
-$base-font-size: 1rem;
-$font-sizes: (
-  xxs: 0.6154, // 8px
-  xs: 0.7692,  // 10px
-  sm: 0.9231,  // 12px
-  md: 1,       // 13px
-  lg: 1.0769,  // 14px
-  xl: 1.2308   // 16px
-);
 @each $sizeKey, $size in $font-sizes {
   .fs-#{$sizeKey} {
     font-size: $size * $base-font-size;
   }
+}
+
+// width  height
+.w-100 {
+  width: 100%;
+}
+.h-100 {
+  height: 100%;
 }
 
 
@@ -69,24 +62,11 @@ $font-sizes: (
 .flex-column {
   flex-direction: column;
 }
-$flex-jc: (   // justify-content    主轴
-  start: flex-start,
-  end: flex-end,
-  center: center,
-  between: space-between,
-  around: space-around
-);
 @each $key, $value in $flex-jc {
   .jc-#{$key} {
     justify-content: $value;
   }
 }
-$flex-ai: (   // align-items        交叉轴
-  start: flex-start,
-  end: flex-end,
-  center: center,
-  stretch: stretch
-);
 @each $key, $value in $flex-ai {
   .ai-#{$key} {
     align-items: $value;
@@ -101,17 +81,6 @@ $flex-ai: (   // align-items        交叉轴
 
 
 // spacing
-$spacing-types: ( m: margin, p: padding );    // margin padding
-$spacing-directions: ( t: top, r: right, b: bottom, l: left );  // 上右下左
-$spacing-base-size: 1rem;
-$spacing-sizes: (
-  0: 0,
-  1: 0.25,
-  2: 0.5,
-  3: 1,
-  4: 1.5,
-  5: 3
-);
 @each $typeKey, $type in $spacing-types {
   // 类似.m-1
   @each $sizeKey, $size in $spacing-sizes {
