--- a/web/src/assets/scss/style.scss
+++ b/web/src/assets/scss/style.scss
@@ -123,11 +123,21 @@ a {
 
 // nav
 .nav {
+  display: flex;
   .nav-item {
     border-bottom: 3px solid transparent;
     padding-bottom: 0.2rem;
     &.active {    // 当前活动页
-      border-bottom: 3px solid #fff;
+      color: map-get($map: $colors, $key: 'primary');
+      border-bottom-color: map-get($map: $colors, $key: 'primary');
+    }
+  }
+  &.nav-inverse {
+    .nav-item {
+      color: map-get($map: $colors, $key: 'white');
+      &.active {
+        border-bottom-color: map-get($map: $colors, $key: 'white');
+      }
     }
   }
 }
