--- a/web/src/assets/scss/style.scss
+++ b/web/src/assets/scss/style.scss
@@ -38,6 +38,13 @@ a {
     text-align: $var;
   }
 }
+// text overflow
+.text-ellipsis {
+  display: inline-block;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+}
 
 // font-size      使用px to rem （快捷键：Alt+s, Alt+z）
 @each $sizeKey, $size in $font-sizes {
