--- a/web/src/assets/scss/_variables.scss
+++ b/web/src/assets/scss/_variables.scss
@@ -1,6 +1,7 @@
 $colors: (
   "primary": #db9e3f,
   "white": #fff,
+  "blue": #4394e4,
   "light": #f9f9f9,
   "light-1": #d4d9de,
   "grey": #999,
