--- a/web/src/assets/scss/_variables.scss
+++ b/web/src/assets/scss/_variables.scss
@@ -2,6 +2,8 @@ $colors: (
   "primary": #db9e3f,
   "white": #fff,
   "blue": #4394e4,
+  "red": hsl(0, 73%, 55%),
+  "green": rgb(41, 173, 81),
   "light": #f9f9f9,
   "light-1": #d4d9de,
   "grey": #999,
